src/test/ui/span/issue-15480.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-15480.rs:5:10
   |
LL |         &id(3)
   |          ^^^^^ temporary value does not live long enough
LL |     ];
   |      - temporary value dropped here while still borrowed
...
LL | }
   | - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
